2002-12-19  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs/patchfs.in: Don't rely on tell() - it doesn't always
	work on pipes.  Determine patch size by adding together the line
	lengths.

2002-12-19  Adam Byrtek  <alpha@debian.org>

	* extfs/patchfs.in: Allow diffs with function names after "@@".
	Don't consider an empty newline as the end of the diff.

2002-12-18  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs/patchfs.in (openread): Use quoted $archive when opening
	archives.
	(list): Set $archive to quoted $_[0].

2002-12-16  Pavel Roskin  <proski@gnu.org>

	* extfs/rpm: Don't check package signatures - it creates a lot
	of noise on stderr if the signature is missing.

2002-12-14  Adam Byrtek  <alpha@debian.org>

	* extfs/mailfs.in: Fixed bug when opening empty mailbox.  Added
	proper message size (not number of lines, like before) counting.

2002-12-13  Pavel Roskin  <proski@gnu.org>

	* extfs/uha.in (mchafs_list): Don't parse the month, use
	DD-MM-YYYY output.
	(mchafs_copyout): Use cat, not mv, because the files can be on
	different filesystems.  Use "q" and don't suppress stderr.

	* extfs/ulha.in: Don't suppress stderr.

	* extfs/uzoo.in: Always use "q" option to avoid processing junk.
	Always create symlink, do it in a safer directory.

	* extfs/uarj.in: New script working with open-source ARJ.
	Contributed by Viatcheslav Odintsov.
	* extfs/uarj: Remove.
	* extfs/hp48: Rename to ...
	* extfs/hp48.in: ... this.  It needs awk substitution.
	* extfs/Makefile.am: Adjust for the above.

	* extfs/ulha.in: Strengthen quoting.

	* extfs/uha.in: Strengthen quoting.  Remove unnecessary space
	after filename.  Update URL.  Use safer temporary directory.

	* extfs/uarj: New list-only implementation that doesn't need
	patched unarj.
	* extfs/unarj.diff: Remove.
	* extfs/Makefile.am: Remove extfs/unarj.diff.

2002-12-13  Adam Byrtek  <alpha@debian.org>

	* extfs/patchfs.in: "copyin" method added (with compressed files